*Rails 3.2.0 (unreleased)*

* In development mode the db:drop task also drops the test database. For symmetry with
  the db:create task. [Dmitriy Kiriyenko]

* Added ActiveRecord::Base.store for declaring simple single-column key/value stores [DHH]

    class User < ActiveRecord::Base
      store :settings, accessors: [ :color, :homepage ]
    end

    u = User.new(color: 'black', homepage: '37signals.com')
    u.color                          # Accessor stored attribute
    u.settings[:country] = 'Denmark' # Any attribute, even if not specified with an accessor


* MySQL: case-insensitive uniqueness validation avoids calling LOWER when
  the column already uses a case-insensitive collation. Fixes #561.

  [Joseph Palermo]

* Transactional fixtures enlist all active database connections. You can test
  models on different connections without disabling transactional fixtures.

  [Jeremy Kemper]

* Add first_or_create, first_or_create!, first_or_initialize methods to Active Record. This is a
  better approach over the old find_or_create_by dynamic methods because it's clearer which
  arguments are used to find the record and which are used to create it:

    User.where(:first_name => "Scarlett").first_or_create!(:last_name => "Johansson")

  [Andrés Mejía]

* Fix nested attributes bug where _destroy parameter is taken into account
  during :reject_if => :all_blank (fixes #2937)

  [Aaron Christy]

*Rails 3.1.2 (unreleased)*

* Fix bug where building the conditions of a nested through association could potentially
  modify the conditions of the through and/or source association. If you have experienced
  bugs with conditions appearing in the wrong queries when using nested through associations,
  this probably solves your problems. [GH #3271]

  [Jon Leighton]

* If a record is removed from a has_many :through, all of the join records relating to that
  record should also be removed from the through association's target.

  [Jon Leighton]
